# 01

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: FindSDL2_image.cmake
